--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     },
     "require": {
         "php": "^5.5 || ^7.0",
-        "zendframework/zend-captcha": "^2.5"
+        "zendframework/zend-captcha": "^2.5",
+        "zendframework/zend-http": "^2.5"
     },
     "require-dev": {
         "zendframework/zend-servicemanager": "^2.7.5 || ^3.0.3",
