--- a/composer.json
+++ b/composer.json
@@ -17,18 +17,13 @@
     "require": {
         "php": "^5.5 || ^7.0",
         "zendframework/zend-captcha": "^2.5",
-        "zendframework/zend-http": "^2.5"
+        "zendframework/zend-http": "^2.5",
+        "zendframework/zend-form": "^2.5"
     },
     "require-dev": {
         "zendframework/zend-servicemanager": "^2.7.5 || ^3.0.3",
         "phpunit/phpunit": "^4.5",
         "squizlabs/php_codesniffer": "^2.3.1"
-    },
-    "suggest": {
-        "zendframework/zend-eventmanager": "^2.6.2 || ^3.0, to support aggregate hydrator usage",
-        "zendframework/zend-serializer": "^2.6.1, to use the SerializableStrategy",
-        "zendframework/zend-servicemanager": "^2.7.5 || ^3.0.3, to support hydrator plugin manager usage",
-        "zendframework/zend-filter": "^2.6, to support naming strategy hydrator usage"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
