--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "php": "^5.5 || ^7.0",
         "zendframework/zend-captcha": "^2.5",
         "zendframework/zend-http": "^2.5",
-        "zendframework/zend-form": "^2.5"
+        "zendframework/zend-form": "^2.5",
+        "zendframework/zend-view": "^2.5",
+        "zendframework/zend-i18n": "^2.5"
     },
     "require-dev": {
         "zendframework/zend-servicemanager": "^2.7.5 || ^3.0.3",
